[package]
name = "nrf52840-mdk"
version = "0.1.0"
authors = ["Christian Perez Llamas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
nb = "0.1.2"

embedded-hal = "0.2.3"
nrf52840-hal = "0.8.1"
